...
                                                <real key="value" value="8"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFg-41-1hl">
                                        <rect key="frame" x="298" y="0.0" width="77" height="46"/>
                                        <accessibility key="accessibilityConfiguration" identifier="viewCartButton" label="View cart"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="77" id="R6f-WW-wEp"/>
                                            <constraint firstAttribute="height" constant="46" id="kyI-OW-TKn"/>
                                        </constraints>
                                        <connections>
                                            <action selector="checkoutButtonClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="TPn-DG-HHI"/>
...
                                                        <action selector="changeTotalClick:" destination="qbK-Rl-tRc" eventType="touchUpInside" id="OF0-dO-kpr"/>
                                                    </connections>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWM-ms-CVN">
                                                    <rect key="frame" x="50" y="162.5" width="275" height="48"/>
                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="checkoutButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="48" id="nlM-iN-yZB"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="IBMPlexMono-Medium" family="IBM Plex Mono" pointSize="12"/>
                                                    <state key="normal" title="Checkout">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="IBMPlexMono-Medium" family="IBM Plex Mono" pointSize="17"/>
                                                            <connections>
                                                                <action selector="setCountryNorwayButtonClick:" destination="YCh-Zh-mYH" eventType="touchUpInside" id="58D-La-603"/>
                                                            </connections>
                                                        </button>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sweden" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEv-hu-YxM">
                                                            <rect key="frame" x="202.5" y="33.5" width="44" height="16"/>
                                                            <fontDescription key="fontDescription" name="IBMPlexMono" family="IBM Plex Mono" pointSize="12"/>
                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIc-my-9dz">
...
